add and apply font

--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -6,4 +6,6 @@ body
    background-position: bottom left;
    background-repeat: no-repeat;
    background-size: 100% auto;
+
+   font-family: 'Lato', sans-serif;
 }
