--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -9,3 +9,14 @@ body
 
    font-family: 'Lato', sans-serif;
 }
+
+header
+{
+   margin-left: 40%;
+}
+
+main
+{
+   margin-left: 55%;
+   margin-right: 7%;
+}
