--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -12,13 +12,24 @@ body
 
 header
 {
+   line-height: 0;
    margin-left: 55%;
    margin-right: 7%;
-   margin-top: 175px;
+   margin-top: 225px;
+   margin-bottom: 200px;
 
    font-variant: small-caps;
    font-size: 4em;
    font-weight: 300;
+}
+
+header span
+{
+   position: fixed;
+   left: 25%;
+   top: 200px;
+   font-size: 2em;
+   line-height: 0;
 }
 
 main
