--- a/simple-web-project-template-master/sass/main.scss
+++ b/simple-web-project-template-master/sass/main.scss
@@ -71,11 +71,11 @@ main
    line-height: 1.5em;
 }
 
-.album ol>li~li
+/*.album ol>li~li
 {
    border-top: 1px solid black;
    padding-top: 20px;
-}
+}*/
 
 .album ul
 {
