--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -81,7 +81,8 @@ h2 {
   font-size: 1.2rem;
   text-indent: 20px;
   border-top: 1px solid #b56b66;
-  padding-top: 1em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .review p {
