--- a/simple-web-project-template-master/sass/main.scss
+++ b/simple-web-project-template-master/sass/main.scss
@@ -95,7 +95,7 @@ h2
 .review
 {
    font-size: 1.2rem;
-   text-indent: 20px;
+   line-height: 1.5rem;
    border-top: 1px solid #b56b66;
    padding-top: 2em;
    padding-bottom: 2em;
