--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -100,3 +100,16 @@ h2 {
   font-weight: 400;
   text-align: right;
 }
+
+@media all and (max-width: 1100px) {
+  header {
+    margin-top: 205px;
+    margin-bottom: 50px;
+  }
+
+  header span {
+    font-size: 7rem;
+    top: 45%;
+    left: 23%;
+  }
+}
