--- a/simple-web-project-template-master/sass/main.scss
+++ b/simple-web-project-template-master/sass/main.scss
@@ -120,3 +120,17 @@ h2
    text-align: right;
 }
 
+@media all and (max-width: 1100px)
+{
+   header
+   {
+      margin-top: 205px;
+      margin-bottom: 50px;
+   }
+   header span
+   {
+      font-size: 7rem;
+      top: 45%;
+      left: 23%;
+   }
+}
