--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -101,7 +101,19 @@ h2 {
   text-align: right;
 }
 
-@media all and (max-width: 1100px) {
+@media all and (max-width: 1200px) {
+  header {
+    margin-top: 173px;
+    margin-bottom: 65px;
+  }
+
+  header span {
+    font-size: 7rem;
+    top: 40%;
+    left: 23%;
+  }
+}
+@media all and (max-width: 1050px) {
   header {
     margin-top: 205px;
     margin-bottom: 50px;
@@ -111,5 +123,10 @@ h2 {
     font-size: 7rem;
     top: 45%;
     left: 23%;
+  }
+
+  main {
+    margin-right: 8%;
+    margin-left: 57%;
   }
 }
