--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -130,3 +130,47 @@ h2 {
     margin-left: 57%;
   }
 }
+@media all and (max-width: 950px) {
+  header span {
+    font-size: 7rem;
+    top: 10%;
+    left: 10%;
+    background-color: white;
+  }
+
+  header {
+    font-size: 3rem;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid black;
+    margin-bottom: 10px;
+    margin: 0px;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    padding-left: 50%;
+    width: 900px;
+    height: 90px;
+  }
+
+  main {
+    font-size: 0.9rem;
+    margin-left: 30%;
+    margin-right: 10%;
+    padding-top: 250px;
+    padding-bottom: 30%;
+  }
+
+  body {
+    background-size: 70% auto;
+  }
+
+  .album {
+    padding-top: 30px;
+  }
+
+  .album div:nth-child(1) {
+    padding-top: 3em;
+    padding-bottom: 3.7em;
+  }
+}
