--- a/simple-web-project-template-master/css/main.css
+++ b/simple-web-project-template-master/css/main.css
@@ -132,9 +132,9 @@ h2 {
 }
 @media all and (max-width: 950px) {
   header span {
-    font-size: 7rem;
-    top: 10%;
-    left: 10%;
+    font-size: 150%;
+    top: 30px;
+    left: 20%;
     background-color: white;
   }
 
@@ -148,21 +148,30 @@ h2 {
     background-color: white;
     position: fixed;
     top: 0;
-    padding-left: 50%;
+    padding-left: 20%;
     width: 900px;
     height: 90px;
   }
 
   main {
     font-size: 0.9rem;
-    margin-left: 30%;
+    background-color: rgba(255, 255, 255, 0.85);
+    margin-left: 10%;
     margin-right: 10%;
     padding-top: 250px;
     padding-bottom: 30%;
+    padding-left: 50px;
+    padding-right: 30px;
   }
 
   body {
-    background-size: 70% auto;
+    background-size: auto 100%;
+  }
+
+  .shield {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
   }
 
   .album {
